parser/fase2/team24/grammar2.py
#Parte lexica en ply
from reportError import CError
from reportError import insert_error
from reportBNF import insertProduction
from reportBNF import insertRegla

entrada = ''

import InstruccionesDGA as inst

reservadas = {
    'now' : 'NOW',
    'smallint' : 'SMALLINT',
    'integer' : 'INTEGER',
    'bigint' : 'BIGINT',
    'decimal' : 'DECIMAL',
    'numeric' : 'NUMERIC',
    'real' : 'REAL',
    'double' : 'DOUBLE',
    'precision' : 'PRECISION',
    'character' : 'CHARACTER',
    'varying' : 'VARYING',
    'text' : 'TEXT',
    'timestamp' : 'TIMESTAMP',
    'select': 'SELECT',
    'extract' : 'EXTRACT',
    'year' : 'YEAR',
    'day' : 'DAY',
    'hour' : 'HOUR',
    'minute' : 'MINUTE',
    'second' : 'SECOND',
    'month' : 'MONTH',
    'date_part' : 'DATE_PART',
    'from' : 'FROM',
    'current_date' : 'CURRENT_DATE',
    'current_time' : 'CURRENT_TIME',
    'boolean' : 'BOOLEAN',
    'create' : 'CREATE',
    'type' : 'TYPE',
    'as' : 'AS',
    'between': 'BETWEEN',
    'is' : 'IS',
    'like' : 'LIKE',
    'in' : 'IN',
    'null' : 'NULL',
    'not' : 'NOT',
    'and' : 'AND',
    'or' : 'OR',
    'replace' : 'REPLACE',
    'database' : 'DATABASE',
    'if' : 'IF',
    'owner' : 'OWNER',
    'alter' : 'ALTER',
    'rename' : 'RENAME',
    'to' : 'TO',
    'current_user' : 'CURRENT_USER',
    'session_user' : 'SESSION_USER',
    'drop' : 'DROP',
    'exists' : 'EXISTS',
    'table' : 'TABLE',
    'constraint' : 'CONSTRAINT',
    'unique' : 'UNIQUE',
    'check' : 'CHECK',
    'key' : 'KEY',
    'primary' : 'PRIMARY',
    'references' : 'REFERENCES',
    'foreign' : 'FOREIGN',
    'set' : 'SET',
    'column' : 'COLUMN',
    'inherits' : 'INHERITS',
    'insert' : 'INSERT',
    'into' : 'INTO',
    'update' : 'UPDATE',
    'delete' : 'DELETE',
    'where' : 'WHERE',
    'values' : 'VALUES',
    'by' : 'BY',
    'having' : 'HAVING',
    'abs' : 'ABS',
    'cbrt' : 'CBRT',
    'ceil' : 'CEIL',
    'ceiling' : 'CEILING',
    'degrees' : 'DEGREES',
    'div' : 'DIV',
    'exp' : 'EXP',
    'factorial' : 'FACTORIAL',
    'floor' : 'FLOOR',
    'gcd' : 'GCD',
    'lcm' : 'LCM',
    'ln' : 'LN',
    'log' : 'LOG',
    'log10' : 'LOG10',
    'min_scale' : 'MIN_SCALE',
    'mod' : 'MOD',
    'pi' : 'PI',
    'power' : 'POWER',
    'radians' : 'RADIANS',
    'round' : 'ROUND',
    'scale' : 'SCALE',
    'sign' : 'SIGN',
    'sqrt' : 'SQRT',
    'trim_scale' : 'TRIM_SCALE',
    'trunc' : 'TRUNC',
    'width_bucket' : 'WIDTH_BUCKET',
    'random' : 'RANDOM',
    'setseed' : 'SETSEED',
    'count' : 'COUNT',
    'length' : 'LENGHT',
    'substring' : 'SUBSTRING',
    'trim' : 'TRIM',
    'get_byte' : 'GET_BYTE',
    'md5' : 'MD5',
    'set_byte' : 'SET_BYTE',
    'sha256' : 'SHA256',
    'substr' : 'SUBSTR',
    'case' : 'CASE',
    'when' : 'WHEN',
    'else' : 'ELSE',
    'end' : 'END',
    'greatest' : 'GREATEST',
    'least' : 'LEAST',
    'limit' : 'LIMIT',
    'asc' : 'ASC',
    'desc' : 'DESC',
    'first' : 'FISRT',
    'last' : 'LAST',
    'nulls' : 'NULLS',
    'offset' : 'OFFSET',
    'all' : 'ALL',
    'union' : 'UNION',
    'intersect' : 'INTERSECT',
    'then' : 'THEN',
    'decode' : 'DECODE',
    'except' : 'EXCEPT',
    'distinct':'DISTINCT',
    'acos':'ACOS',
    'acosd':'ACOSD',
    'asin':'ASIN',
    'asind':'ASIND',
    'atan':'ATAN',
    'atand':'ATAND',
    'atan2':'ATAN2',
    'atan2d':'ATAN2D',
    'cos':'COS',
    'cosd':'COSD',
    'cot':'COT',
    'cotd':'COTD',
    'sin':'SIN',
    'sind':'SIND',
    'tan':'TAN',
    'tand':'TAND',
    'sinh':'SINH',
    'cosh':'COSH',
    'tanh':'TANH',
    'asinh':'ASINH',
    'acosh':'ACOSH',
    'atanh':'ATANH',
    'trunc':'TRUNC',
    'sum':'SUM',
    'avg':'AVG',
    'max':'MAX',
    'min':'MIN',
    'length':'LENGTH',
    'convert' : 'CONVERT',
    'false' : 'FALSE',
    'true' : 'TRUE',
    'group' : 'GROUP',
    'order' : 'ORDER',
    'show' : 'SHOW',
    'databases' : 'DATABASES',
    'mode' : 'MODE',
    'add' : 'ADD',
    'only' : 'ONLY',
    'serial' : 'SERIAL',
    'name' : 'NAME',
    'default' : 'DEFAULT',
    'use'   :   'USE',
    'money' :   'MONEY',
    'date'  :   'DATE',
    'varchar'   :   'VARCHAR',
    'time'  :   'TIME'
}

tokens = [
            'VIR',
            'DEC',
            'MAS',
            'MENOS',
            'ELEVADO',
            'MULTIPLICACION',
            'DIVISION',
            'MODULO',
            'MENOR',
            'MAYOR',
            'IGUAL',
            'MENOR_IGUAL',
            'MAYOR_IGUAL',
            'MENOR_MENOR',
            'MAYOR_MAYOR',
            'DIFERENTE',
            'SIMBOLOOR',
            'SIMBOLOAND',
            'LLAVEA',
            'LLAVEC',
            'PARA',
            'PARC',
            'DOSPUNTOS',
            'COMA',
            'PUNTO',
            'INT',
            'TEXTO',
            'CHAR',
            'ID',
            'PUNTOCOMA',
            'PTCOMA',
            'CORCHETEA',
            'CORCHETEC',
            'DOLAR'
] + list(reservadas.values())

#Token
t_VIR = r'~'
t_MAS = r'\+' 
t_MENOS = r'-'
t_ELEVADO= r'\^'
t_MULTIPLICACION = r'\*'
t_DIVISION =r'/'
t_MODULO= r'%'
t_MENOR =r'<'
t_MAYOR =r'>'
t_IGUAL =r'='
t_MENOR_IGUAL =r'<='
t_MAYOR_IGUAL =r'>='
t_MENOR_MENOR =r'<<'
t_MAYOR_MAYOR =r'>>'
t_DIFERENTE=r'<>'
t_SIMBOLOOR=r'\|'
t_SIMBOLOAND = r'\&'
t_LLAVEA = r'\{'
t_LLAVEC = r'\}'
t_PARA = r'\('
t_PARC = r'\)'
t_DOSPUNTOS=r'\:'
t_COMA=r'\,'
t_PUNTOCOMA=r';'
t_PUNTO=r'\.'
t_PTCOMA = r'\;'
t_CORCHETEA=r'\['
t_CORCHETEC=r'\]'
t_DOLAR = r'\$'

def t_DEC(t):
    r'\d+\.\d+'
    try:
        t.value = float(t.value)
    except ValueError:
        descript = 'error lexico at token ' + str(t.value)
        linea = str(t.lineno)
        columna = str(find_column(t))
        nuevo_error = CError(linea,columna,descript,'Lexico')
        insert_error(nuevo_error)
        print("Error no se puede convertir %d", t.value)
        t.value = 0
    return t

def t_INT(t):
    r'\d+'
    try:
        t.value = int(t.value)
    except ValueError:
        descript = 'error lexico at token ' + str(t.value)
        linea = str(t.lineno)
        columna = str(find_column(t))
        nuevo_error = CError(linea,columna,descript,'Lexico')
        insert_error(nuevo_error)
        print("Valor numerico incorrecto %d", t.value)
        t.value = 0
    return t

def t_ID(t):
    r'[a-zA-Z_][a-zA-Z_0-9]*'
    t.type = reservadas.get(t.value.lower(), 'ID')  
    return t

def t_TEXTO(t):
    r'\'.*?\''
    t.value = t.value[1:-1]  # remuevo las comillas
    return t

def t_VARCHAR(t):
    r'\'.*?\''
    t.value = t.value[1:-1]  # remuevo las comillas
    return t

def t_COMENT_SIMPLE(t):
    r'//.*\n'
    t.lexer.lineno += 1

def t_COMENT_MULTILINEA(t):
    r'/\*(.|\n)*?\*/'
    t.lexer.lineno += t.value.count('\n')

t_ignore = " \t"

def t_nuevalinea(t):
    r'\n+'
    t.lexer.lineno += t.value.count("\n")

def t_error(t):
    descript = 'error lexico at token ' + str(t.value[0])
    linea = str(t.lineno)
    columna = str(find_column(t))
    nuevo_error = CError(linea,columna,descript,'Lexico')
    insert_error(nuevo_error)
    t.lexer.skip(1)

from classesQuerys import *
from procedural import *
import ply.lex as lex
lexer = lex.lex()

precedence = (
    ('left','PUNTO'),
    ('right','UMAS','UMENOS'),
    ('left','ELEVADO'),
    ('left','MULTIPLICACION','DIVISION','MODULO'),
    ('left','MAS','MENOS'),
    ('left','BETWEEN','IN','LIKE'),
    ('left','MENOR','MAYOR','MENOR_IGUAL','MAYOR_IGUAL','IGUAL','DIFERENTE'),
    ('right','NOT'),
    ('left','AND'),
    ('left','OR')
)
"""INICIO ANALIZADOR"""
#PRODUCCIONES GENERALES
def p_inicio(p):
    """
    inicio  :   inicio inst
    """
    p[1].append(p[2])
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_inicio2(p):
    """
    inicio  :   inst
    """
    p[0] = [p[1]]
    insertProduction(p.slice, len(p.slice))
    
def p_inst(p):
    """
    inst    :   createdb
            |   showdb
            |   alterdb
            |   dropdb
            |   createtb
            |   droptb
            |   altertb
            |   insert
            |   update
            |   delete
            |   usedb
            |   query
            |   createfunc
    """
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_id(p):
    "id : ID"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_valortipo(p):
    """
    valortipo   :   INT
                |   ID
                |   DEC
                |   TEXTO
                |   FALSE
                |   TRUE
    """
    p[0] = str(p[1])
    insertProduction(p.slice, len(p.slice))

def p_valornume(p):
    """
    valornume   :   INT
                |   DEC
    """
    p[0] = p[1]

def p_valortipo1(p):
    """
    valortipo   :   ddlmath
                |   ddltrig
                |   ddlfunc
    """
    p[0] = p[1]

def p_ddlmath(p):
    '''
    ddlmath : ABS PARA  valornume PARC
		| CBRT PARA  valornume PARC
		| CEIL PARA  valornume PARC
		| CEILING PARA valornume PARC
		| DEGREES PARA  valornume PARC
		| DIV PARA valornume COMA valornume PARC	
		| EXP PARA valornume PARC	
		| FACTORIAL PARA  valornume PARC
		| FLOOR PARA  valornume PARC
		| GCD PARA  valornume COMA valornume PARC
		| LCM PARA  valornume COMA valornume PARC
		| LN PARA  valornume PARC
		| LOG PARA  valornume COMA valornume PARC
		| LOG10 PARA  valornume PARC
		| MIN_SCALE PARA valornume PARC
		| MOD PARA valornume COMA valornume PARC
		| PI PARA PARC
		| POWER PARA  valornume COMA valornume PARC
		| RADIANS PARA  valornume PARC
		| ROUND PARA  valornume PARC
		| SCALE PARA  valornume PARC
		| SIGN PARA  valornume PARC
		| SQRT PARA  valornume PARC
		| TRIM_SCALE PARA valornume PARC
		| TRUNC PARA  valornume PARC 
		| WIDTH_BUCKET PARA  valornume COMA valornume COMA valornume COMA valornume PARC
		| RANDOM PARA PARC
		| SETSEED PARA  valornume PARC    
    '''
    if p[1].lower() == 'abs' : p[0] =  inst.math_abs2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'cbrt' : p[0] =  inst.math_cbrt2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'ceil' : p[0] =  inst.math_ceil2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'ceiling' : p[0] =  inst.math_ceil2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'div' : p[0] =  inst.math_div2(p[3],p[5]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'exp' : p[0] =  inst.math_exp2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'factorial' : p[0] =  inst.math_factorial2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'floor' : p[0] =  inst.math_floor2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'gcd' : p[0] =  inst.math_gcd2(p[3],p[5]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'lcm' : p[0] =  inst.math_lcm2(p[3],p[5]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'ln' : p[0] =  inst.math_ln2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'log' : p[0] =  inst.math_log2(p[3],p[5]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'log10' : p[0] =  inst.math_log102(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'min_scale' : p[0] =  inst.math_min_scale2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'mod' : p[0] =  inst.math_mod2(p[3],p[5]);(p.slice, len(p.slice))
    elif p[1].lower() == 'pi' : p[0] =  inst.math_pi2();insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'power' : p[0] =  inst.math_power2(p[3],p[5]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'radians' : p[0] =  inst.math_radians2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'round' : p[0] =  inst.math_round2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'scale' : p[0] =  inst.math_scale2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'sign' : p[0] =  inst.math_sign2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'sqrt' : p[0] =  inst.math_sqrt2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'trim_scale' : p[0] =  inst.math_trim_scale2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'trunc' : p[0] =  inst.math_trunc2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'width_bucket' : p[0] =  inst.math_widthBucket2(p[3],p[5],p[7],p[9]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'random' : p[0] =  inst.math_random2();insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'setseed' : p[0] =  inst.math_setseed2(p[3]);insertProduction(p.slice, len(p.slice))
    
def p_ddltrig(p):
    """
    ddltrig :   ACOS PARA valornume PARC
		| ACOSD PARA valornume PARC
		| ASIN PARA valornume PARC
		| ASIND PARA valornume PARC
		| ATAN PARA valornume PARC
		| ATAND PARA valornume PARC
		| ATAN2 PARA valornume COMA valornume PARC
		| ATAN2D PARA valornume COMA valornume PARC
		| COS PARA valornume PARC
		| COSD PARA valornume PARC
		| COT PARA valornume PARC
		| COTD PARA valornume PARC
		| SIN PARA valornume PARC
		| SIND PARA valornume PARC
		| TAN PARA valornume PARC
		| TAND PARA valornume PARC
		| SINH PARA valornume PARC
		| COSH PARA valornume PARC 
		| TANH PARA valornume PARC
		| ASINH PARA valornume PARC
		| ACOSH PARA valornume PARC
		| ATANH PARA valornume PARC
    """
    if p[1].lower() == 'acos' : p[0] =  inst.trig_acos2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'acosd' : p[0] =  inst.trig_acosd2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'asin' : p[0] =  inst.trig_asin2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'asind' : p[0] =  inst.trig_asind2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'atan' : p[0] =  inst.trig_atan2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'atand' : p[0] =  inst.trig_atand2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'atan2' : p[0] =  inst.trig_atan22(p[3],p[5]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'atan2d' : p[0] =  inst.trig_atan2d2(p[3],p[5]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'cos' : p[0] =  inst.trig_cos2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'cosd' : p[0] =  inst.trig_cosd2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'cot' : p[0] =  inst.trig_cot2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'cotd' : p[0] =  inst.trig_cotd2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'sin' : p[0] =  inst.trig_sin2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'sind' : p[0] =  inst.trig_sind2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'tan' : p[0] =  inst.trig_tan2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'tand' : p[0] =  inst.trig_tand2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'sinh' : p[0] =  inst.trig_sinh2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'cosh' : p[0] =  inst.trig_cosh2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'tanh' : p[0] =  inst.trig_tanh2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'asinh' : p[0] =  inst.trig_asinh2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'acosh' : p[0] =  inst.trig_acosh2(p[3]);insertProduction(p.slice, len(p.slice))
    elif p[1].lower() == 'atanh' : p[0] =  inst.trig_atanh2(p[3]);insertProduction(p.slice, len(p.slice))

def p_ddlfunc(p):
    """
    ddlfunc :     LENGTH PARA TEXTO PARC
                | SUBSTRING PARA TEXTO COMA TEXTO COMA TEXTO PARC
                | TRIM PARA TEXTO PARC
                | MD5 PARA TEXTO PARC
                | SHA256 PARA TEXTO PARC
                | SUBSTR PARA TEXTO COMA TEXTO COMA TEXTO PARC
                | CONVERT PARA TEXTO AS type PARC
                | GREATEST PARA listparaddlfunc PARC
                | LEAST PARA listparaddlfunc PARC
                | NOW PARA PARC

    """
    if p[1].lower() == 'length' : p[0] = inst.fun_length2(p[3]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'substring' : p[0] = inst.fun_substr2(p[3],p[5],p[7]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'trim' : p[0] = inst.fun_trim2(p[3]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'md5' : p[0] = inst.fun_md52(p[3]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'sha256' : p[0] = inst.fun_sha2562(p[3]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'substr' : p[0] = inst.fun_substr2(p[3],p[5],p[7]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'greatest' : p[0] = inst.fun_greatest2(p[3]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'least' : p[0] = inst.fun_least2(p[3]);insertProduction(p.slice, len(p.slice))
    if p[1].lower() == 'now' : p[0] = inst.fun_now2(p[1]);insertProduction(p.slice, len(p.slice))

def p_listparaddlfun(p):
    """
    listparaddlfunc :   listparaddlfunc COMA valornume
    """
    p[1].append(p[3])
    p[0] = p[1]

def p_listparaddlfun1(p):
    """
    listparaddlfunc :   valornume
    """
    p[0] = [p[1]]

def p_cond(p):
    """
    cond    :   id MAYOR valortipo
            |   id MENOR valortipo
            |   id IGUAL valortipo
            |   id MENOR_IGUAL valortipo
            |   id MAYOR_IGUAL valortipo
    """
    p[0] = inst.cond(p[1],p[2],p[3])
    insertProduction(p.slice, len(p.slice))

def p_wherecond(p):
    "wherecond  :  id BETWEEN valortipo AND valortipo"
    p[0] = inst.wherecond(p[1],p[3],p[5])
    insertProduction(p.slice, len(p.slice))

def p_wherecond1(p):
    """
    wherecond  :   id MAYOR valortipo
            |   id MENOR valortipo
            |   id IGUAL valortipo
            |   id MENOR_IGUAL valortipo
            |   id MAYOR_IGUAL valortipo
    """
    p[0] = inst.wherecond1(p[1],p[3],p[2])
    insertProduction(p.slice, len(p.slice))

def p_reservadatipo(p):
    """
    reservadatipo   :   SMALLINT
                    |   INTEGER
                    |   BIGINT
                    |   DECIMAL
                    |   NUMERIC
                    |   REAL
                    |   DOUBLE PRECISION
                    |   MONEY
                    |   TEXT
                    |   DATE
                    |   TIME
                    |   BOOLEAN
    """
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_reservadatipo1(p):
    """
    reservadatipo   :   VARCHAR PARA INT PARC
                    |   CHARACTER varying PARA INT PARC
                    |   CHAR PARA INT PARC
    """
    p[0] = inst.reservadatipo(p[1],p[3])
    insertProduction(p.slice, len(p.slice))

def p_varying(p):
    """
    varying :   VARYING
    """
    p[0] = p[1]

def p_varying1(p):
    """
    varying :   
    """
    p[0] = ""

#MANIPULACION DE BASES DE DATOS
#CREATEDB----------------------
def p_createdb(p):
    "createdb   :   CREATE replacedb DATABASE ifnotexists id owner mode PTCOMA"
    p[0] = inst.createdb(p[2],p[4],p[5],p[6],p[7])
    insertProduction(p.slice, len(p.slice))

def p_replacedb(p):
    "replacedb  :   OR REPLACE"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_replacedb1(p):
    "replacedb  :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_ifnotexists(p):
    "ifnotexists    :   IF NOT EXISTS"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_ifnotexists1(p):
    "ifnotexists    :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_owner(p):
    "owner :   OWNER IGUAL valortipo"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_owner1(p):
    "owner  :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_mode(p):
    "mode   :   MODE IGUAL valortipo"
    p[0] = p[3]
    insertProduction(p.slice, len(p.slice))

def p_mode1(p):
    "mode   :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

#SHOW DATABASES------------------
def p_showdb(p):
    "showdb :   SHOW DATABASES PTCOMA"
    p[0] = inst.showdb(p[1])
    insertProduction(p.slice, len(p.slice))
   
#ALTER DATABASE------------------
def p_alterdb(p):
    "alterdb    :   ALTER DATABASE alterdb2 PTCOMA"
    p[0] = inst.alterdb(p[3])
    insertProduction(p.slice, len(p.slice))

def p_alterdb2(p):
    "alterdb2   :   id alterdb3"
    p[0] = inst.alterdb2(p[1],p[2])
    insertProduction(p.slice, len(p.slice))

def p_alterdb21(p):
    "alterdb2    :   NAME OWNER TO valortipo"
    p[0] = inst.alterdb21(p[4])
    insertProduction(p.slice, len(p.slice))

def p_alterdb3(p):
    "alterdb3   :   RENAME TO valortipo"
    p[0] = inst.alterdb3(p[3])
    insertProduction(p.slice, len(p.slice))

def p_alterdb31(p):
    "alterdb3   :   OWNER TO LLAVEA valortipo SIMBOLOOR valortipo SIMBOLOOR valortipo LLAVEC"
    p[0] = inst.alterdb31(p[4],p[6],p[8])
    insertProduction(p.slice, len(p.slice))

#DROP DATABASE--------------------
def p_dropdb(p):
    "dropdb :   DROP DATABASE ifexists id PTCOMA"
    insertProduction(p.slice, len(p.slice))

def p_ifexists(p):
    "ifexists   :   IF EXISTS"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_ifexists1(p):
    "ifexists   :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

#USE DATABASE----------------------
def p_usedb(p):
    "usedb  :   USE id PTCOMA"
    p[0] = inst.usedb(p[2])
    insertProduction(p.slice, len(p.slice))

#MANIPULACION DE TABLAS
# CREATE TABLE-------------------
def p_createtb(p):
    "createtb   :   CREATE TABLE id PARA coltb PARC inherits PTCOMA"
    p[0] = inst.createtb(p[3],p[5],p[7])
    insertProduction(p.slice, len(p.slice))

def p_inherits(p):
    "inherits   :   INHERITS PARA id PARC"
    p[0] = p[3]
    insertProduction(p.slice, len(p.slice))

def p_inhrits1(p):
    "inherits   :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_coltb(p):
    "coltb  :   coltb COMA columna"
    p[1].append(p[3])
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_coltb1(p):
    "coltb  :   columna"
    p[0] = [p[1]]
    insertProduction(p.slice, len(p.slice))

def p_columna(p):
    "columna    :   id reservadatipo notnull key references default constraint"
    p[0] = inst.columna(p[1],p[2],p[3],p[4],p[5],p[6],p[7])
    insertProduction(p.slice, len(p.slice))

def p_references(p):
    "references :   REFERENCES id"
    p[0] = p[2]
    insertProduction(p.slice, len(p.slice))

def p_references1(p):
    "references :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_key(p):
    """
    key :   SERIAL PRIMARY KEY
        |   PRIMARY KEY colkey
        |   FOREIGN KEY colkey
    """
    p[0] = p[1] + " " + p[2] + " " + p[3]
    insertProduction(p.slice, len(p.slice))

def p_key1(p):
    "key    :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_colkey(p):
    "colkey :   PARA colkey2 PARC"
    p[0] = p[2]
    insertProduction(p.slice, len(p.slice))

def p_colkey1(p):
    "colkey :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_colkey2(p):
    "colkey2    :   colkey2 COMA id"
    p[0] = [p[1],p[3]]
    insertProduction(p.slice, len(p.slice))

def p_colkey21(p):
    "colkey2    :   id"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_default(p):
    "default    :   DEFAULT id"
    p[0] = p[2]
    insertProduction(p.slice, len(p.slice))

def p_default1(p):
    "default    :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_notnull(p):
    "notnull    :   not NULL"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_notnull1(p):
    "notnull    :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_not(p):
    "not : NOT"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_not1(p):
    "not : "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_constraint(p):
    "constraint :   UNIQUE"
    p[0] = p[1]
    insertProduction(p.slice, len(p.slice))

def p_constraint1(p):
    "constraint :   const CHECK PARA cond PARC"
    p[0] = [p[1],p[4]]
    insertProduction(p.slice, len(p.slice))

def p_constraint11(p):
    "constraint :   "
    p[0] = ""
    insertProduction(p.slice, len(p.slice))

def p_const(p):
    "const  :   CONSTRAINT id"
    p[0] = p[2]
    insertProduction(p.slice, len(p.slice))
